sandc/test/fixtures/pbtRegression/shouldFail/implicitShadowing/localVarDeclaration/LocVarDec.sand
pub class LocVarDec {
    foo() {
        let true = null;
    }
}